src/objects/Condition_Log__c.object
<CustomObject><fields>
        <fullName>ConditionID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition ID</label>
        <referenceTo>Condition__c</referenceTo>
        <relationshipLabel>Conditions History</relationshipLabel>
        <relationshipName>Conditions_History</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Loan_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Id</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipName>ConditionLogs</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>New_Comments__c</fullName>
        <label>New Comments</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>New_Status__c</fullName>
        <label>New Status</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Old_Comments__c</fullName>
        <label>Old Comments</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Old_CreatedBy__c</fullName>
        <label>Old CreatedBy</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Old_CreatedDate__c</fullName>
        <label>Old CreatedDate</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Old_ModifiedBy__c</fullName>
        <label>Old ModifiedBy</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Old_ModifiedDate__c</fullName>
        <label>Old ModifiedDate</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Old_Status__c</fullName>
        <label>Old Status</label>
        <length>50</length>
        <type>Text</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Condition History</label><nameField>
        <displayFormat>CL-{0}</displayFormat>
        <label>ConditionLog Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Conditions History</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility></CustomObject>